# Rattled

./: .gitignore  LICENSE  PLAN.md  README.md  install.bat  install.ps1  pyproject.toml  rattled.py
docs/: _config.yml  index.html  reference.html
examples/: conditionsExample.ry  errorTest.ry  fullDemo.ry  loopsExample.ry  mathUtils.ry  moduleDemo.ry  phase6Demo.ry  phase7Demo.ry  printStatement.ry
interpreter/: Lexographer.py  __init__.py  ast_nodes.py  constants.py  lexer.py  main.py  rParser.py  rattled_std.py  tok.py  transpiler.py
interpreter/Objects/: VarObj.py
vscode-rattled/: language-configuration.json  package.json
vscode-rattled/syntaxes/: rattled.tmLanguage.json
