[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rattled"
version = "0.1.0"
description = "The Rattled programming language — a transpiler to Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["programming-language", "transpiler", "rattled"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

[project.scripts]
rattled = "interpreter.main:main"

[tool.setuptools.packages.find]
include = ["interpreter*"]
